testsuite/tests/polykinds/T7328.stderr

T7328.hs:8:34: error:
    • Expected kind ‘k1’, but ‘f’ has kind ‘k0 -> k1’
    • In the first argument of ‘Foo’, namely ‘f’
      In the first argument of ‘Proxy’, namely ‘(Foo f)’
      In the type signature: foo :: a ~ f i => Proxy (Foo f)
